--- a/django/bmi/templates/bmi/base.html
+++ b/django/bmi/templates/bmi/base.html
@@ -7,7 +7,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <title>{% block title %}{% endblock %}</title>
+      <title>Bodycalc.io - {% block title %}{% endblock %}</title>
 
       {% stylesheet 'pollsX' %}
       {% if debug %}
@@ -16,10 +16,18 @@
       {% endif %}
       {% block head %}{% endblock %}
     </head>
-    <body onload="hello();">
+    <body class="bg-light" onload="hello();">
       <div class="container">
         {% block body %}
         {% endblock %}
+        <footer class="my-5 pt-5 text-muted text-center text-small">
+          <p class="mb-1">&copy; 2019 Bodycalc.io</p>
+          <ul class="list-inline">
+            <li class="list-inline-item"><a href="#">Privacy</a></li>
+            <li class="list-inline-item"><a href="#">Terms</a></li>
+            <li class="list-inline-item"><a href="#">Support</a></li>
+          </ul>
+        </footer>
       </div>
 
       <!-- Pipeline bundled js -->
