setup bootstrap theming

--- a/django/bmi/templates/bmi/base.html
+++ b/django/bmi/templates/bmi/base.html
@@ -16,7 +16,7 @@
       {% endif %}
       {% block head %}{% endblock %}
     </head>
-    <body class="bg-light" onload="hello();">
+    <body onload="hello();">
       <div class="container">
         {% block body %}
         {% endblock %}
