--- a/django/bmi/staticfiles/scss/bootstrap-theme.scss
+++ b/django/bmi/staticfiles/scss/bootstrap-theme.scss
@@ -1,7 +1,6 @@
 // Your variable overrides
-$body-bg: #000;
-$body-color: #111;
-$btn-primary-color: orange;
+$primary: #8E83B8;    // Atom Ant purple
+$secondary: #E67818; // Atom Ant orange
 
 // Bootstrap and its default variables
 @import "../../../../components/bower_components/bootstrap/scss/bootstrap";
