page layout experiments

--- a/django/bmi/templates/bmi/base.html
+++ b/django/bmi/templates/bmi/base.html
@@ -1,4 +1,4 @@
-{% load static from staticfiles %}
+{% load static %}
 {% load pipeline %}
 
 <!DOCTYPE html>
@@ -7,6 +7,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
+      <link rel='shortcut icon' type='image/x-icon' href='{% static 'images/atom-ant.jpg' %}' />
       <title>Bodycalc.io - {% block title %}{% endblock %}</title>
 
       {% stylesheet 'pollsX' %}
