--- a/django/dashboard/templates/dashboard/base.html
+++ b/django/dashboard/templates/dashboard/base.html
@@ -4,17 +4,17 @@
 <!DOCTYPE html>
 <html lang='en_us'>
     <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <meta name="description" content="Latest updates and statistic charts">
+      <meta charset='UTF-8'>
+      <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+      <meta http-equiv='X-UA-Compatible' content='ie=edge'>
+      <meta name='description' content='Latest updates and statistic charts'>
       <title>Bodycalc.io - {% block title %}{% endblock %}</title>
 
   		<!--begin::Web font -->
-  		<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js"></script>
+  		<script src='https://ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js'></script>
   		<script>
   			WebFont.load({
-                  google: {"families":["Poppins:300,400,500,600,700","Raleway:300,400,500,600,700"]},
+                  google: {'families':['Poppins:300,400,500,600,700','Raleway:300,400,500,600,700']},
                   active: function() {
                       sessionStorage.fonts = true;
                   }
@@ -22,17 +22,10 @@
           </script>
   		<!--end::Web font -->
 
-      <!--begin::Page Vendors Styles -->
-  		<link href='{% static 'vendors/custom/fullcalendar/fullcalendar.bundle.css' %}' rel="stylesheet" type="text/css" />
-
-  		<!--begin::Global Theme Styles -->
-  		<link href='{% static 'vendors/base/vendors.bundle.css' %}' rel="stylesheet" type="text/css" />
-
-  		<!--RTL version:<link href="assets/vendors/base/vendors.bundle.rtl.css" rel="stylesheet" type="text/css" />-->
-  		<link href='{% static 'demo/demo5/base/style.bundle.css' %}' rel="stylesheet" type="text/css" />
-
-  		<!--begin::Layout Skins -->
-  		<link href='{% static 'demo/demo5/skins/header/navy.css' %}' rel="stylesheet" type="text/css" />
+  		<link href='{% static 'vendors/custom/fullcalendar/fullcalendar.bundle.css' %}' rel='stylesheet' type='text/css' />
+  		<link href='{% static 'vendors/base/vendors.bundle.css' %}' rel='stylesheet' type='text/css' />
+  		<link href='{% static 'demo/demo5/base/style.bundle.css' %}' rel='stylesheet' type='text/css' />
+  		<link href='{% static 'demo/demo5/skins/header/navy.css' %}' rel='stylesheet' type='text/css' />
 
       <!--
       {% stylesheet 'dashboardCSS' %}
@@ -43,65 +36,55 @@
       {% endif %}
       {% block head %}{% endblock %}
     </head>
-    <body class="k-header--fixed k-header-mobile--fixed k-aside--enabled k-aside--fixed k-aside--offcanvas-default">
-      {% block body %}
-      {% endblock %}
+    <body class='k-header--fixed k-header-mobile--fixed k-aside--enabled k-aside--fixed k-aside--offcanvas-default'>
 
-      <!-- Add footer here -->
+      <div class='k-grid k-grid--hor k-grid--root'>
+        <div class='k-grid__item k-grid__item--fluid k-grid k-grid--ver k-page'>
+          <div class='k-grid__item k-grid__item--fluid k-grid k-grid--hor k-wrapper' id='k_wrapper'>
+
+            {% include 'dashboard/header.html' %}
+
+            {% block body %}
+            {% endblock %}
+
+            {% include 'dashboard/footer.html' %}
+
+          </div>
+        </div>
+      </div>
+
 
       <!-- Add Js here -->
       <!-- begin::Global Config -->
   		<script>
   			var KAppOptions = {
-  				"colors": {
-  					"state": {
-  						"brand": "#1cac81",
-  						"metal": "#c4c5d6",
-  						"light": "#ffffff",
-  						"accent": "#00c5dc",
-  						"primary": "#5867dd",
-  						"success": "#34bfa3",
-  						"info": "#36a3f7",
-  						"warning": "#ffb822",
-  						"danger": "#fd3995",
-  						"focus": "#9816f4"
+  				'colors': {
+  					'state': {
+  						'brand': '#1cac81',
+  						'metal': '#c4c5d6',
+  						'light': '#ffffff',
+  						'accent': '#00c5dc',
+  						'primary': '#5867dd',
+  						'success': '#34bfa3',
+  						'info': '#36a3f7',
+  						'warning': '#ffb822',
+  						'danger': '#fd3995',
+  						'focus': '#9816f4'
   					},
-  					"base": {
-  						"label": ["#b9bdc1", "#aeb2b7", "#414b4c", "#343d3e"],
-  						"shape": ["#eef4f3", "#e0e9e6", "#80c3af", "#41675c"]
+  					'base': {
+  						'label': ['#b9bdc1', '#aeb2b7', '#414b4c', '#343d3e'],
+  						'shape': ['#eef4f3', '#e0e9e6', '#80c3af', '#41675c']
   					}
   				}
   			};
   		</script>
 
-  		<!-- end::Global Config -->
+  		<script src='{% static 'vendors/base/vendors.bundle.js' %}' type='text/javascript'></script>
+  		<script src='{% static 'demo/demo5/base/scripts.bundle.js' %}' type='text/javascript'></script>
+  		<script src='{% static 'vendors/custom/fullcalendar/fullcalendar.bundle.js' %}' type='text/javascript'></script>
+      <script src='{% static 'app/scripts/custom/dashboard.js' %}' type='text/javascript'></script>
+  		<script src='{% static 'app/scripts/bundle/app.bundle.js' %}' type='text/javascript'></script>
 
-
-  		<!--begin::Global Theme Bundle -->
-  		<script src='{% static 'vendors/base/vendors.bundle.js' %}' type="text/javascript"></script>
-  		<script src='{% static 'demo/demo5/base/scripts.bundle.js' %}' type="text/javascript"></script>
-
-  		<!--end::Global Theme Bundle -->
-
-  		<!--begin::Page Vendors -->
-  		<script src='{% static 'vendors/custom/fullcalendar/fullcalendar.bundle.js' %}' type="text/javascript"></script>
-
-  		<!--end::Page Vendors -->
-
-  		<!--begin::Page Scripts -->
-      <script src='{% static 'app/scripts/custom/dashboard.js' %}' type="text/javascript"></script>
-
-  		<!--end::Page Scripts -->
-
-  		<!--begin::Global App Bundle -->
-  		<script src='{% static 'app/scripts/bundle/app.bundle.js' %}' type="text/javascript"></script>
-
-  		<!--end::Global App Bundle -->
-
-
-      <!-- Pipeline bundled js
-      {% javascript 'dashboardJS' %}
-      -->
       {% if debug %}
         <!-- add stuff that only links when in Debug mode -->
       {% else %}
