separate header elements into widgets

--- a/django/dashboard/templates/dashboard/footer.html
+++ b/django/dashboard/templates/dashboard/footer.html
@@ -11,3 +11,9 @@
 </div>
 
 <!-- end:: Footer -->
+
+<!-- begin::Scrolltop -->
+<div id='k_scrolltop' class='k-scrolltop'>
+  <i class='la la-arrow-up'></i>
+</div>
+<!-- end::Scrolltop -->
