--- a/django/dashboard/templates/dashboard/widgets/macros.html
+++ b/django/dashboard/templates/dashboard/widgets/macros.html
@@ -1,10 +1,11 @@
 {% load static %}
 
+
 <!--begin::Portlet-->
 <div class='k-portlet k-portlet--height-fluid'>
   <div class='k-portlet__head  k-portlet__head--noborder'>
     <div class='k-portlet__head-label'>
-      <h3 class='k-portlet__head-title'>Technologies</h3>
+      <h3 class='k-portlet__head-title'>Macros</h3>
     </div>
     <div class='k-portlet__head-toolbar'>
       <div class='k-portlet__head-toolbar-wrapper'>
