--- a/django/dashboard/templates/dashboard/widgets/top-foods.html
+++ b/django/dashboard/templates/dashboard/widgets/top-foods.html
@@ -4,7 +4,7 @@
 <div class='k-portlet k-portlet--height-fluid'>
   <div class='k-portlet__head'>
     <div class='k-portlet__head-label'>
-      <h3 class='k-portlet__head-title'>Top Products</h3>
+      <h3 class='k-portlet__head-title'>Top Foods</h3>
     </div>
     <div class='k-portlet__head-toolbar'>
       <div class='k-portlet__head-toolbar-wrapper'>
@@ -59,19 +59,19 @@
         <li class='nav-item'>
           <a class='nav-link active' data-toggle='tab' href='#k_tabs_19_15be902ca1d4df' role='tab'>
             <span class='nav-link-icon'><i class='flaticon2-graphic'></i></span>
-            <span class='nav-link-title'>Settings</span>
+            <span class='nav-link-title'>Fat</span>
           </a>
         </li>
         <li class='nav-item'>
           <a class='nav-link' data-toggle='tab' href='#k_tabs_19_25be902ca1d4df' role='tab'>
             <span class='nav-link-icon'><i class='flaticon2-position'></i></span>
-            <span class='nav-link-title'>Code</span>
+            <span class='nav-link-title'>Carbs</span>
           </a>
         </li>
         <li class='nav-item'>
           <a class='nav-link' data-toggle='tab' href='#k_tabs_19_35be902ca1d4df' role='tab'>
             <span class='nav-link-icon'><i class='flaticon2-layers-1'></i></span>
-            <span class='nav-link-title'>Design</span>
+            <span class='nav-link-title'>Proteins</span>
           </a>
         </li>
       </ul>
