--- a/django/dashboard/templates/dashboard/widgets/weight.html
+++ b/django/dashboard/templates/dashboard/widgets/weight.html
@@ -4,7 +4,7 @@
 <div class='k-portlet k-portlet--height-fluid'>
   <div class='k-portlet__head  k-portlet__head--noborder'>
     <div class='k-portlet__head-label'>
-      <h3 class='k-portlet__head-title'>Total Orders</h3>
+      <h3 class='k-portlet__head-title'>Weight</h3>
     </div>
     <div class='k-portlet__head-toolbar'>
       <div class='k-portlet__head-toolbar-wrapper'>
@@ -56,7 +56,7 @@
   <div class='k-portlet__body k-portlet__body--fluid'>
     <div class='k-widget-20'>
       <div class='k-widget-20__title'>
-        <div class='k-widget-20__label'>17M</div>
+        <div class='k-widget-20__label'>175lb</div>
         <img class='k-widget-20__bg' src='{% static 'media/misc/iconbox_bg.png' %}' alt='bg' />
       </div>
       <div class='k-widget-20__data'>
