fix minor UI bugs. reorder dashboard widgets

--- a/django/dashboard/templates/dashboard/widgets/top-foods.html
+++ b/django/dashboard/templates/dashboard/widgets/top-foods.html
@@ -80,9 +80,9 @@
           <div class='k-widget-1__item'>
             <div class='k-widget-1__item-info'>
               <a href='#' class='k-widget-1__item-title'>
-                HTML 5 Templates
+                Garnachas
               </a>
-              <div class='k-widget-1__item-desc'>Font-end,Admin & Email</div>
+              <div class='k-widget-1__item-desc'>con papas fritas</div>
             </div>
             <div class='k-widget-1__item-stats'>
               <div class='k-widget-1__item-value'>+79%</div>
@@ -96,7 +96,7 @@
           <div class='k-widget-1__item'>
             <div class='k-widget-1__item-info'>
               <a href='#' class='k-widget-1__item-title'>
-                Wordpress Themes
+                Tacos
               </a>
               <div class='k-widget-1__item-desc'>eCommerce Website, Plugin</div>
             </div>
@@ -111,8 +111,8 @@
           </div>
           <div class='k-widget-1__item'>
             <div class='k-widget-1__item-info'>
-              <a href='#' class='k-widget-1__item-title'>eCommerce Websites</a>
-              <div class='k-widget-1__item-desc'>Shops, Fasion wep sites & atc</div>
+              <a href='#' class='k-widget-1__item-title'>Mangogos</a>
+              <div class='k-widget-1__item-desc'>con chili piquín</div>
             </div>
             <div class='k-widget-1__item-stats'>
               <div class='k-widget-1__item-value'>-16%</div>
@@ -125,8 +125,8 @@
           </div>
           <div class='k-widget-1__item'>
             <div class='k-widget-1__item-info'>
-              <a href='#' class='k-widget-1__item-title'>UI/UX Design</a>
-              <div class='k-widget-1__item-desc'>Evrything you ever imagine</div>
+              <a href='#' class='k-widget-1__item-title'>Cauhuamas</a>
+              <div class='k-widget-1__item-desc'>Bien frias</div>
             </div>
             <div class='k-widget-1__item-stats'>
               <div class='k-widget-1__item-value'>+4%</div>
@@ -139,8 +139,8 @@
           </div>
           <div class='k-widget-1__item'>
             <div class='k-widget-1__item-info'>
-              <a href='#' class='k-widget-1__item-title'>Freebie Themes</a>
-              <div class='k-widget-1__item-desc'>Font-end & Admin</div>
+              <a href='#' class='k-widget-1__item-title'>Twinkies</a>
+              <div class='k-widget-1__item-desc'>para el camino</div>
             </div>
             <div class='k-widget-1__item-stats'>
               <div class='k-widget-1__item-value'>+34</div>
@@ -155,8 +155,8 @@
         <div class='tab-pane fade' id='k_tabs_19_25be902ca1d4df' role='tabpanel'>
           <div class='k-widget-1__item'>
             <div class='k-widget-1__item-info'>
-              <a href='#' class='k-widget-1__item-title'>UI/UX Design</a>
-              <div class='k-widget-1__item-desc'>Evrything you ever imagine</div>
+              <a href='#' class='k-widget-1__item-title'>Doritos</a>
+              <div class='k-widget-1__item-desc'>family size!</div>
             </div>
             <div class='k-widget-1__item-stats'>
               <div class='k-widget-1__item-value'>+4%</div>
@@ -169,8 +169,8 @@
           </div>
           <div class='k-widget-1__item'>
             <div class='k-widget-1__item-info'>
-              <a href='#' class='k-widget-1__item-title'>HTML 5 Templates</a>
-              <div class='k-widget-1__item-desc'>Font-end,Admin & Email</div>
+              <a href='#' class='k-widget-1__item-title'>Elotes</a>
+              <div class='k-widget-1__item-desc'>deliciosos</div>
             </div>
             <div class='k-widget-1__item-stats'>
               <div class='k-widget-1__item-value'>+79%</div>
@@ -183,8 +183,8 @@
           </div>
           <div class='k-widget-1__item'>
             <div class='k-widget-1__item-info'>
-              <a href='#' class='k-widget-1__item-title'>Wordpress Themes</a>
-              <div class='k-widget-1__item-desc'>eCommerce Website, Plugin</div>
+              <a href='#' class='k-widget-1__item-title'>Burritos</a>
+              <div class='k-widget-1__item-desc'>bien grandes</div>
             </div>
             <div class='k-widget-1__item-stats'>
               <div class='k-widget-1__item-value'>+21%</div>
@@ -197,8 +197,8 @@
           </div>
           <div class='k-widget-1__item'>
             <div class='k-widget-1__item-info'>
-              <a href='#' class='k-widget-1__item-title'>eCommerce Websites</a>
-              <div class='k-widget-1__item-desc'>Shops, Fasion wep sites & atc</div>
+              <a href='#' class='k-widget-1__item-title'>Mundet</a>
+              <div class='k-widget-1__item-desc'>en botellas de 2 litros</div>
             </div>
             <div class='k-widget-1__item-stats'>
               <div class='k-widget-1__item-value'>-16%</div>
@@ -211,8 +211,8 @@
           </div>
           <div class='k-widget-1__item'>
             <div class='k-widget-1__item-info'>
-              <a href='#' class='k-widget-1__item-title'>Freebie Themes</a>
-              <div class='k-widget-1__item-desc'>Font-end & Admin</div>
+              <a href='#' class='k-widget-1__item-title'>Carnitas</a>
+              <div class='k-widget-1__item-desc'>como guisado</div>
             </div>
             <div class='k-widget-1__item-stats'>
               <div class='k-widget-1__item-value'>+34</div>
