--- a/django/dashboard/templates/header/header.html
+++ b/django/dashboard/templates/header/header.html
@@ -13,8 +13,8 @@
 <!-- begin:: Header Mobile -->
 <div id='k_header_mobile' class='k-header-mobile  k-header-mobile--fixed '>
   <div class='k-header-mobile__logo'>
-    <a href='index.html'>
-      <img alt='Logo' src='{% static 'media/logos/logo-1.png' %}' />
+    <a href=''>
+      <img alt='Logo' src='{% static 'images/weight-scale.png' %}' height="25px" />
     </a>
   </div>
   <div class='k-header-mobile__toolbar'>
@@ -29,7 +29,7 @@
 
   <!-- begin:: Brand -->
   <div class='k-header__brand   k-grid__item' id='k_header_brand'>
-    <a href='index.html'>
+    <a href=''>
       <img alt='Logo' src='{% static 'images/weight-scale.png' %}' height="50px" />
     </a>
   </div>
