--- a/django/dashboard/templates/dashboard/widgets/macros.html
+++ b/django/dashboard/templates/dashboard/widgets/macros.html
@@ -57,7 +57,7 @@
   <div class='k-portlet__body k-portlet__body--fluid'>
     <div class='k-widget-21'>
       <div class='k-widget-21__title'>
-        <div class='k-widget-21__label'>9.3M</div>
+        <div class='k-widget-21__label'>1,800 avg. calories</div>
         <img src='{% static 'media/misc/iconbox_bg.png' %}' class='k-widget-21__bg' alt='bg' />
       </div>
       <div class='k-widget-21__data'>
@@ -66,15 +66,15 @@
         <div class='k-widget-21__legends'>
           <div class='k-widget-21__legend'>
             <i class='k-bg-brand'></i>
-            <span>HTML</span>
+            <span>Fats</span>
           </div>
           <div class='k-widget-21__legend'>
             <i class='k-shape-bg-color-4'></i>
-            <span>CSS</span>
+            <span>Carbs</span>
           </div>
           <div class='k-widget-21__legend'>
             <i class='k-shape-bg-color-3'></i>
-            <span>Angular</span>
+            <span>Protein</span>
           </div>
         </div>
         <div class='k-widget-21__chart'>
